<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_one"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="218dp"
        android:layout_height="291dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/Monoalphabetic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Monoalphabetic Cipher" />

        <RadioButton
            android:id="@+id/vigenere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vigenere_cipher" />

        <RadioButton
            android:id="@+id/substitution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/substitution_cipher" />

        <RadioButton
            android:id="@+id/autoKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autokey_cipher" />

        <RadioButton
            android:id="@+id/Affine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Affine Cipher" />

        <RadioButton
            android:id="@+id/RailFence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rail Fence Cipher" />
    </RadioGroup>

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>